--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.png">
     <title>Sokoban</title>
 </head>
 <body>
-    <script src="/bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
