--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <script src="bundle.js"></script>
+    <p>Sprites by <a href="https://kenney.nl/assets/sokoban">www.kenney.nl</a></p>
 </body>
 </html>
