--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <script type="module" src="Game/bootstrap.js"></script>
+        <div id="game"></div>
+        <script type="module" src="./Game/bootstrap.js"></script>
     </body>
 </html>
